# test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: main.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
scripts/: index_documents.py  prepare_dataset.py  test_generation.py
src/agents/: __init__.py  jira_agent.py  tools.py
src/chains/: __init__.py  generation.py  refinement.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  models.py  text_utils.py
src/data/: __init__.py  loader.py  splitter.py
src/embeddings/: __init__.py  gemini.py
src/jira/: __init__.py  client.py  models.py
src/llm/: __init__.py  gemini.py  prompts.py
src/pipeline/: __init__.py  generation.py  indexing.py
src/retrieval/: __init__.py  retriever.py
src/vectorstore/: __init__.py  chroma.py
